plugins {
    id 'java-library'
    id "com.github.ben-manes.versions" version "0.51.0"
    id "io.github.krakowski.jextract" version "0.5.0"
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation libs.guava
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

def luaSrc = file("~/dev/lua-5.4.7").absolutePath
jextract {
    header("${luaSrc}/src/lua.h") {
        libraries = [ 'lua' ]
        includes = ["$luaSrc/src"]
        targetPackage = 'org.itsallcode.jlua.ffi'
    }
}

compileJava {
    options.compilerArgs += ['--enable-preview', '-Xlint:all,-preview', '-Werror']
}

sourceSets {
  main {
    //java.srcDirs += "${project.buildDir}/generated/sources/jextract/main/java/"
  }
}
